--- a/Frontend_React/package.json
+++ b/Frontend_React/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
