--- a/Frontend_React/package.json
+++ b/Frontend_React/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.3",
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^2.4.0",
